feat: background color change

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html{
     padding: 0;
     margin: 0;
-    background: black;
+    background: rgb(64, 64, 64);
     height: 100%;
     width: 100%;
 }
